// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`About component renders correctly 1`] = `
<section
  className="about container"
>
  <div
    className="about-wrapper"
  >
    <div
      className="about-item"
    >
      <h2
        id="work"
      >
        Work
      </h2>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "foo",
          }
        }
      />
    </div>
    <div
      className="about-item"
    >
      <h2
        id="education"
      >
        Education
      </h2>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "bar",
          }
        }
      />
    </div>
  </div>
</section>
`;

exports[`About component renders correctly when data is not available 1`] = `
<section
  className="about container"
>
  <div
    className="about-wrapper"
  />
</section>
`;
